--- a/style.css
+++ b/style.css
@@ -12,10 +12,11 @@
 
 }
 :root {
-    --bg-color: #1f242d;
-    --second-bg-color: #323946;
-    --text-color: #fff;
-    --main-color: #0ef;
+    --bg-color: #fecd45;
+    --second-bg-color: #ffe18d;
+    --text-color: #000000;
+    --main-color: #2568fb;
+    --alt-text-color: #fff;
 }
 html {
     font-size: 62.5%;
@@ -235,7 +236,7 @@ span {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(rgba(0,0,0,.1),var(--main-color));
+    background: linear-gradient(rgba(0,0,0,.1),var(--bg-color));
     display: flex;
     justify-content: center;
     align-items: center;
@@ -271,4 +272,31 @@ span {
 .portfolio-layer a i {
     font-size: 2rem;
     color: var(--second-bg-color);
+}
+.contact h2 {
+    margin-bottom: 4rem;
+}
+.contact form {
+    max-width: 70rem;
+    margin: 1rem auto;
+    text-align: center;
+    margin-bottom: 3rem;
+
+}
+.contact form .input-box {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    
+    
+}
+.contact form .input-box input,.contact form textarea {
+    width: 100%;
+    padding: 1.5rem;
+    font-size: 1.6rem;
+    color: var(--text-color);
+    background: var(--second-bg-color);
+    border-radius: .8rem;
+    margin: .7rem 0;
+
 }
