--- a/style.css
+++ b/style.css
@@ -38,11 +38,15 @@ section {
     left: 0;
     width: 100%;
     padding: 2rem 9%;
-    background: var(--bg-colo);
+    background: var(--bg-color);
     display: flex;
     justify-content: space-between;
     align-items: center;
     z-index: 100;
+
+}
+.header.sticky {
+     border-bottom: .1rem solid var(--bg-color);
 
 }
 .logo {
@@ -77,7 +81,20 @@ section {
 
 }
 .home-img img{
-    width: 20vw ;
+    width: 40vw ;
+    padding-top: 6rem;
+    animation: floatImage 4s ease-in-out infinite;
+}
+@keyframes floatImage {
+    0% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-2.4rem);
+    }
+    100% {
+        transform: translateY(0);
+    }
 }
 .home-content h3 {
     font-size: 3.2rem;
@@ -290,13 +307,173 @@ span {
     
     
 }
-.contact form .input-box input,.contact form textarea {
+.contact form .input-box input,
+.contact form textarea {
     width: 100%;
     padding: 1.5rem;
+    border: .2rem solid var(--bg-color);
+    border-radius: 2rem;
+    margin: .7rem 0;
     font-size: 1.6rem;
     color: var(--text-color);
-    background: var(--second-bg-color);
-    border-radius: .8rem;
-    margin: .7rem 0;
+    transition: .5s ease;
+}
+.contact form .input-box input {
+    width: 49%;
 
+}
+.contact form textarea {
+    width: 100%;
+    height: 20rem;
+    resize: none;
+}
+.contact form .btn {
+    width: 49%;
+    margin: 1rem 0;
+    margin-top: 2rem;
+    cursor: pointer;
+}
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 2rem 9%;
+    background: var(--main-color);
+}
+.footer-text p {
+    font-size: 1.6rem;
+    color: var(--bg-color);
+
+}
+footer-icontop a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 5rem;
+    height: 5rem;
+    background: var(--bg-color);
+    border-radius: .8rem;
+    margin: 0 .5rem;
+    transition: .5s ease;
+    padding: .8rem;
+}
+footer-icontop a:hover {
+    box-shadow: 0 0 1rem var(--bg-color);
+    background: var(--second-bg-color);
+}
+.footer-icontop a i {
+    font-size: 2.4rem;
+    color: var(--bg-color);
+}
+
+/*Breakpoints*/
+@media (max-width: 1200px) {
+    html {
+        width: 100%;
+    }
+}
+@media (max-width: 991px) {
+    .header {
+        padding: 2rem 3%;      
+    }
+    .section {
+        padding: 10rem 3% 2rem;      
+    }
+    .services {
+        padding-bottom: 7rem;
+    }
+    .portfolio {
+        padding-bottom: 7rem;      
+    }
+    .footer {
+        padding: 2rem 3%;      
+    }
+    .contact  {
+        min-height: auto;
+    }
+}
+@media (max-width: 768px) {
+    #menu-icon {
+       display: block;     
+    }
+    .navbar {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        padding: 1rem 3%;
+        background: var(--bg-color);
+        border-top: .1rem solid var(--bg-color);
+        box-shadow: 0 .5rem .5rem rgba(0,0,0,.2);
+        display: none;
+    }
+    .navbar.active {
+        display: block;
+    }
+    .navbar a {
+        display: block;
+        margin: 3rem;
+        font-size: 2rem;
+        color: var(--text-color);
+        transition: .5s ease;
+    }
+    .home {
+        flex-direction: column;     
+    }
+    .home-content h3 {
+        font-size: 2.6rem;     
+    }
+    .home-content h1 {
+        font-size: 5rem;     
+    }
+    .home-content img {
+        width: 70vw;
+        margin-top: 4rem;     
+    }
+    .about {
+        flex-direction: column-reverse;     
+    }
+    .about img {
+        width: 70vw;
+        margin-top: 4rem;     
+    }
+    .services h2 {
+        margin-bottom: 3rem;     
+    }
+    .portfolio h2 {
+        margin-bottom: 3rem;     
+    }
+    .portfolio-container {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+    @media (max-width: 617px) {
+    .portfolio-container {
+        grid-template-columns: repeat(1fr);    
+
+    }
+}
+
+   @media (max-width: 480px) {
+    html {
+        font-size: 50%
+    }
+    .contact form .input-box input {
+        width: 100%;
+    }
+}
+@media (max-width: 365px) {
+    .home-img img {
+        width: 90vw;
+    }
+    .about-img img {
+        width: 90vw;
+    }
+    .footer {
+        flex-direction: column-reverse;
+    }
+    .footer p {
+        margin-top: 2rem;
+    }
 }
