--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -113,6 +113,7 @@ span {
 }
 .home-content p {
     font-size: 1.6rem;
+    padding-top: 2rem;
 
 }
 .social-media a {
@@ -137,7 +138,7 @@ span {
 
 .btn {
     display: inline-block;
-    padding: 1rem 2rem;
+    padding: 2rem 2rem;
     background: var(--main-color);
     border-radius: 4rem;
     box-shadow: 0 0 1rem var(--main-color);
